--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Hello World</title>
-  <link rel="manifest" href="/manifest.json">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="/manifest.json"></head></link>
+  <link rel="stylesheet" href="CSS/style.css"></link>
   <meta name="theme-color" content="white"/>
   <meta name="apple-mobile-web-app-capable" content="yes">  
 <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
